fix(card): change spacing

--- a/src/components/card/header/header.css
+++ b/src/components/card/header/header.css
@@ -1,5 +1,5 @@
 .card-header {
-  @apply p-8 rounded-t-lg text-center font-bold text-white;
+  @apply px-8 py-4 rounded-t-lg text-center font-bold text-white;
 
   &.purple {
     @apply bg-purple-200;
